--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "autoprefixer": "^10.2.6",
     "postcss": "^8.3.5",
     "tailwindcss": "^2.2.4"
+  },
+  "engines": {
+    "node": ">16.14.0 <17",
+    "npm": ">= 3.0.0"
   }
 }
